# Graphle

./: .gitignore  CMakeLists.txt  README.md  README_8md.html  algorithm_8hpp.html  algorithm_8hpp_source.html  always__false_8hpp.html  always__false_8hpp_source.html  annotated.html  breadth__first__search_8cpp.html  breadth__first__search_8cpp_source.html  breadth__first__search_8hpp.html  breadth__first__search_8hpp_source.html  classes.html  classgraphle_1_1detail_1_1edge__duplication__view-members.html  classgraphle_1_1detail_1_1edge__duplication__view.html  classgraphle_1_1detail_1_1edge__from__vertex__view-members.html  classgraphle_1_1detail_1_1edge__from__vertex__view.html  classgraphle_1_1detail_1_1maybe__exists__view-members.html  classgraphle_1_1detail_1_1maybe__exists__view.html  classgraphle_1_1detail_1_1transforming__wrapping__iterator-members.html  classgraphle_1_1detail_1_1transforming__wrapping__iterator.html  classgraphle_1_1detail_1_1vertex__perspective__view-members.html  classgraphle_1_1detail_1_1vertex__perspective__view.html  classgraphle_1_1detail_1_1wrapping__iterator-members.html  classgraphle_1_1detail_1_1wrapping__iterator.html  classgraphle_1_1meta_1_1always__false-members.html  classgraphle_1_1meta_1_1always__false.html  classgraphle_1_1meta_1_1is__template-members.html  classgraphle_1_1meta_1_1is__template.html  classgraphle_1_1search_1_1search__visitor-members.html  classgraphle_1_1search_1_1search__visitor.html  classgraphle_1_1store_1_1provide__external-members.html  classgraphle_1_1store_1_1provide__external.html  classgraphle_1_1store_1_1provide__newly__constructed-members.html  classgraphle_1_1store_1_1provide__newly__constructed.html  classgraphle_1_1store_1_1provide__owned-members.html  classgraphle_1_1store_1_1provide__owned.html  classgraphle_1_1test_1_1test__registry-members.html  classgraphle_1_1test_1_1test__registry.html  (+337 more)
.github/workflows/: cmake-multi-platform.yml  doxygen.yml  run-tests-linux-clang.yml  run-tests-linux-gcc.yml  run-tests-linux.yml  run-tests-windows-clang.yml  run-tests-windows-msvc.yml  run-tests-windows.yml
cmake/: create_include_header.cmake
graphle/: CMakeLists.txt  algorithm.hpp  doxygen.hpp  graph.hpp  graphle.hpp  meta.hpp  search.hpp  storage.hpp  utility.hpp  views.hpp
graphle/algorithm/: strongly_connected_components.hpp
graphle/graph/: constraint_debug_helper.hpp  edges.hpp  graph.hpp  graph_concepts.hpp  vertex_compare.hpp
graphle/meta/: always_false.hpp  concepts.hpp  if_constexpr.hpp  is_template.hpp  trait_definition.hpp  tuple.hpp  type_list.hpp  value.hpp
graphle/search/: breadth_first_search.hpp  depth_first_search.hpp  search_impl.hpp  visitor.hpp
graphle/storage/: default_storage_provider.hpp  storage_provider.hpp  storage_provider_helpers.hpp
graphle/utility/: edge_utils.hpp  functional.hpp  range_utils.hpp  storage_utils.hpp  vec_of_vecs_output_iterator.hpp  vertex_utils.hpp
graphle/utility/detail/: functional.hpp
graphle/views/: duplicate_transposed_edges.hpp  edge_from_vertex.hpp  edge_perspective.hpp  maybe_exists.hpp
graphle_test/: CMakeLists.txt  test_data.hpp  test_datastructures.hpp  test_framework.hpp  test_utils.hpp
graphle_test/algorithm/: strongly_connected_components.cpp
graphle_test/meta/: type_list.cpp
graphle_test/search/: breadth_first_search.cpp  depth_first_search.cpp  test_visit_order.hpp
graphle_test/storage/: default_storage_provider.cpp
graphle_test/utility/: vec_of_vecs_output_iterator.cpp
libgraphle/: CMakeLists.txt  algorithm.hpp  common.hpp  graph.hpp  libgraphle.hpp  meta.hpp  search.hpp  storage.hpp  utility.hpp  views.hpp
libgraphle/graph/: graph_concepts.hpp
libgraphle/meta/: const_pointer.hpp  type_list.hpp
libgraphle/search/: depth_first_search.hpp  visitor.hpp
libgraphle/storage/: storage_provider.hpp
libgraphle/utility/: degree.hpp
libgraphle/utility/detail/: range_utils.hpp  storage_utils.hpp  vec_of_vecs_output_iterator.hpp
libgraphle/views/: edge_perspective.hpp
libgraphle_test/: CMakeLists.txt  test_data.hpp  test_datastructures.hpp
libgraphle_test/search/: breadth_first_search.cpp  visitor.cpp
libgraphle_test/storage/: default_storage_provider.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  concepts_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+76 more)
