FILE(GLOB_RECURSE TESTS LIST_DIRECTORIES FALSE CONFIGURE_DEPENDS "*.cpp")

FOREACH (TEST IN ITEMS ${TESTS})
    MESSAGE(STATUS "Adding test target for file ${TEST}")

    GET_FILENAME_COMPONENT(TEST_NAME ${TEST} NAME_WE)
    SET(TEST_NAME "test_${TEST_NAME}")

    ADD_EXECUTABLE(${TEST_NAME} ${TEST})
    ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

    TARGET_LINK_LIBRARIES(${TEST_NAME} PUBLIC "Graphle")
    TARGET_INCLUDE_DIRECTORIES(${TEST_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
ENDFOREACH()